--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- https://threejs.org/examples/webgl_animation_keyframes.html -->
 <html>
   <head>
-    <title>Littlest Tokyo</title>
+    <title>Kaizen Era Wrld</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <link rel="manifest" href="manifest.json">
