--- a/index.html
+++ b/index.html
@@ -32,29 +32,44 @@
         flex-direction: column;
         transition: height 0.5s cubic-bezier(.4,1.6,.4,1);
       }
-      .info-content {
-        flex: 1 1 auto;
-        overflow-y: auto;
-        padding: 0 10px;
-        scroll-behavior: smooth;
+      .slide-container {
+        width: 100%;
+        height: 100%;
+        position: relative;
+        overflow: hidden;
       }
-      .section {
-        min-height: 100%;
-        padding: 20px 0;
-        box-sizing: border-box;
+      .slide {
+        width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0; left: 0;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.5s;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+      }
+      .slide.active {
+        opacity: 1;
+        pointer-events: auto;
+        z-index: 2;
       }
       .section-title {
         font-size: 1.2em;
         font-weight: bold;
         margin-bottom: 10px;
       }
-      .roadmap-container {
+      .roadmap-owners {
         display: flex;
         flex-direction: row;
-        overflow-x: auto;
         gap: 24px;
-        padding: 20px 0;
-        scroll-snap-type: x mandatory;
+        width: 100vw;
+        overflow: hidden;
+        align-items: center;
+        justify-content: flex-start;
+        position: relative;
       }
       .owner-card {
         min-width: 180px;
@@ -65,12 +80,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        scroll-snap-align: center;
         transition: transform 0.3s;
-      }
-      .owner-card.active {
-        transform: scale(1.08);
-        box-shadow: 0 4px 24px rgba(0,0,0,0.18);
       }
       .owner-avatar {
         width: 48px;
@@ -78,26 +88,6 @@
         border-radius: 50%;
         background: #eee;
         margin-bottom: 8px;
-      }
-      .section-horizontal {
-        display: flex;
-        flex-direction: row;
-        overflow-x: auto;
-        gap: 32px;
-        scroll-snap-type: x mandatory;
-        min-height: 100%;
-        align-items: flex-start;
-      }
-      .stat-card {
-        min-width: 200px;
-        background: #f7f7fa;
-        border-radius: 16px;
-        box-shadow: 0 2px 12px rgba(0,0,0,0.06);
-        padding: 18px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        scroll-snap-align: center;
       }
       .section-indicator {
         display: flex;
@@ -313,7 +303,7 @@
         let panelHeight = window.innerHeight * 0.22;
         let expandedHeight = window.innerHeight;
         let isExpanded = false;
-        let currentSection = 0;
+        let currentSlide = 0;
         // Dummy blockchain data
         const owners = [
           { name: 'Fabio', avatar: '', date: '2024-01-01', tx: '0x1234...abcd' },
@@ -348,96 +338,120 @@
           infoPanel.style.display = 'flex';
           infoPanel.style.flexDirection = 'column';
           lockBodyScroll();
-          // --- Sezioni ---
-          const content = document.createElement('div');
-          content.className = 'info-content';
-          content.style.height = '100%';
-          content.style.overflowY = 'auto';
-          content.innerHTML = `
-            <div class="section section-0">
-              <div class="section-title">${nftData.title}</div>
-              <p>${nftData.description}</p>
-              <p>Caratteristiche:</p>
-              <ul>${nftData.features.map(feature => `<li>${feature}</li>`).join('')}</ul>
-            </div>
-            <div class="section section-1">
-              <div class="section-title">Provenienza Blockchain</div>
-              <div class="roadmap-container">
-                ${owners.map((owner, i) => `
-                  <div class="owner-card${i === 0 ? ' active' : ''}">
-                    <div class="owner-avatar"></div>
-                    <div style="font-weight:bold;">${owner.name}</div>
-                    <div style="font-size:0.8em; color:#888;">${owner.date}</div>
-                    <div style="font-size:0.7em; color:#2c3e50; margin-top:4px;">${owner.tx}</div>
-                  </div>
-                `).join('')}
-              </div>
-            </div>
-            <div class="section section-2">
-              <div class="section-title">Statistiche NFT</div>
-              <div class="section-horizontal">
-                ${stats.map(stat => `
-                  <div class="stat-card">
-                    <div style="font-weight:bold; font-size:1.1em;">${stat.label}</div>
-                    <div style="font-size:1.3em; color:#2c3e50; margin-top:8px;">${stat.value}</div>
-                  </div>
-                `).join('')}
-              </div>
-            </div>
-            <div class="section section-3">
-              <div class="section-title">Altre info</div>
-              <p>Questa sezione può contenere ulteriori dettagli, link, documentazione, ecc.</p>
-            </div>
+          // --- Slide container ---
+          const slideContainer = document.createElement('div');
+          slideContainer.className = 'slide-container';
+          slideContainer.style.height = '100%';
+          slideContainer.style.width = '100%';
+          // --- Slide 0: Info capo ---
+          const slide0 = document.createElement('div');
+          slide0.className = 'slide slide-0 active';
+          slide0.innerHTML = `
+            <div class="section-title">${nftData.title}</div>
+            <p>${nftData.description}</p>
+            <p>Caratteristiche:</p>
+            <ul>${nftData.features.map(feature => `<li>${feature}</li>`).join('')}</ul>
           `;
-          infoPanel.appendChild(content);
+          // --- Slide 1: Ownership (blockchain) ---
+          const slide1 = document.createElement('div');
+          slide1.className = 'slide slide-1';
+          slide1.innerHTML = `
+            <div class="section-title">Provenienza Blockchain</div>
+            <div class="roadmap-owners" id="roadmap-owners"></div>
+          `;
+          // --- Slide 2: Statistiche NFT ---
+          const slide2 = document.createElement('div');
+          slide2.className = 'slide slide-2';
+          slide2.innerHTML = `
+            <div class="section-title">Statistiche NFT</div>
+            <ul>${stats.map(stat => `<li><b>${stat.label}:</b> ${stat.value}</li>`).join('')}</ul>
+          `;
+          // --- Slide 3: Altre info ---
+          const slide3 = document.createElement('div');
+          slide3.className = 'slide slide-3';
+          slide3.innerHTML = `
+            <div class="section-title">Altre info</div>
+            <p>Questa sezione può contenere ulteriori dettagli, link, documentazione, ecc.</p>
+          `;
+          // --- Aggiungi slide ---
+          slideContainer.appendChild(slide0);
+          slideContainer.appendChild(slide1);
+          slideContainer.appendChild(slide2);
+          slideContainer.appendChild(slide3);
+          infoPanel.appendChild(slideContainer);
           // --- Indicatori sezione ---
           const indicator = document.createElement('div');
           indicator.className = 'section-indicator';
           indicator.innerHTML = '<div class="dot active"></div><div class="dot"></div><div class="dot"></div><div class="dot"></div>';
           infoPanel.appendChild(indicator);
-          // --- Gestione scroll per espansione ---
+          // --- Ownership roadmap ---
+          const roadmap = slide1.querySelector('#roadmap-owners');
+          owners.forEach(owner => {
+            const card = document.createElement('div');
+            card.className = 'owner-card';
+            card.innerHTML = `
+              <div class="owner-avatar"></div>
+              <div style="font-weight:bold;">${owner.name}</div>
+              <div style="font-size:0.8em; color:#888;">${owner.date}</div>
+              <div style="font-size:0.7em; color:#2c3e50; margin-top:4px;">${owner.tx}</div>
+            `;
+            roadmap.appendChild(card);
+          });
+          // --- Gestione swipe/scroll tra slide ---
           let startY = null;
-          let lastScroll = 0;
-          content.addEventListener('touchstart', (e) => {
+          let isAnimating = false;
+          infoPanel.addEventListener('touchstart', (e) => {
             if (e.touches.length === 1) {
               startY = e.touches[0].clientY;
             }
           });
-          content.addEventListener('touchmove', (e) => {
-            if (startY !== null && e.touches.length === 1) {
-              const deltaY = startY - e.touches[0].clientY;
-              if (!isExpanded && deltaY > 30) {
-                // Espandi
-                infoPanel.style.height = expandedHeight + 'px';
-                isExpanded = true;
-              } else if (isExpanded && deltaY < -30 && content.scrollTop === 0) {
-                // Riduci
-                infoPanel.style.height = panelHeight + 'px';
-                isExpanded = false;
+          infoPanel.addEventListener('touchend', (e) => {
+            if (startY !== null && !isAnimating) {
+              const endY = e.changedTouches[0].clientY;
+              const deltaY = startY - endY;
+              if (Math.abs(deltaY) > 40) {
+                if (deltaY > 0 && currentSlide < 3) {
+                  // Avanti
+                  goToSlide(currentSlide + 1);
+                } else if (deltaY < 0 && currentSlide > 0) {
+                  // Indietro
+                  goToSlide(currentSlide - 1);
+                }
               }
+              startY = null;
             }
           });
-          content.addEventListener('touchend', () => { startY = null; });
-          // --- Gestione scroll tra sezioni ---
-          content.addEventListener('scroll', () => {
-            const scrollY = content.scrollTop;
-            const sectionHeights = [0];
-            let acc = 0;
-            Array.from(content.children).forEach(child => {
-              acc += child.offsetHeight;
-              sectionHeights.push(acc);
-            });
-            for (let i = 0; i < sectionHeights.length - 1; i++) {
-              if (scrollY >= sectionHeights[i] && scrollY < sectionHeights[i + 1]) {
-                currentSection = i;
-                break;
-              }
-            }
+          // --- Funzione per cambiare slide ---
+          function goToSlide(idx) {
+            if (isAnimating) return;
+            isAnimating = true;
+            // Slide out/in
+            slideContainer.querySelector('.slide.active').classList.remove('active');
+            slideContainer.querySelector('.slide-' + idx).classList.add('active');
             // Aggiorna indicatori
             Array.from(indicator.children).forEach((dot, i) => {
-              dot.className = 'dot' + (i === currentSection ? ' active' : '');
+              dot.className = 'dot' + (i === idx ? ' active' : '');
             });
-          });
+            currentSlide = idx;
+            // Se ownership, parte animazione orizzontale
+            if (idx === 1) {
+              animateRoadmap(() => {
+                // Dopo animazione, passa alla slide successiva
+                setTimeout(() => goToSlide(2), 600);
+              });
+            }
+            setTimeout(() => { isAnimating = false; }, 700);
+          }
+          // --- Animazione roadmap orizzontale ---
+          function animateRoadmap(cb) {
+            const roadmap = slide1.querySelector('#roadmap-owners');
+            const totalWidth = roadmap.scrollWidth - roadmap.clientWidth;
+            if (totalWidth > 0) {
+              gsap.to(roadmap, { scrollTo: { x: totalWidth }, duration: 1.2, ease: 'power2.inOut', onComplete: cb });
+            } else {
+              setTimeout(cb, 400);
+            }
+          }
         } else {
           // Desktop: stile classico
           infoPanel.style.position = 'fixed';
